test/fail/lib/anon_class.mo
actor class () {}; // import actor class must be named
